--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "md-paste-jpg",
-  "displayName": "md-paste-jpg",
-  "description": "paste image to jpg format directly when working on the WSL",
+  "name": "md-paste-enhanced",
+  "displayName": "markdown paste enhanced",
+  "description": "paste image directly when working on the WSL",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.71.0"
@@ -10,14 +10,21 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:md-paste-jpg.pasteJPG"
+    "onCommand:md-paste-enhanced.paste"
   ],
   "main": "./src/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "md-paste-jpg.pasteJPG",
+        "command": "md-paste-enhanced.paste",
         "title": "paste image from clipboard"
+      }
+    ],
+    "keybindings": [
+      {
+        "key": "ctrl+v",
+        "command": "md-paste-enhanced.paste",
+        "when": "editorTextFocus && editorLangId == 'markdown'"
       }
     ]
   },
@@ -27,14 +34,14 @@
     "test": "node ./test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.71.0",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "14.x",
+    "@types/vscode": "^1.71.0",
+    "@vscode/test-electron": "^2.1.3",
     "eslint": "^8.11.0",
     "glob": "^7.2.0",
     "mocha": "^9.2.2",
-    "typescript": "^4.5.5",
-    "@vscode/test-electron": "^2.1.3"
+    "typescript": "^4.5.5"
   }
 }
