--- a/package.json
+++ b/package.json
@@ -14,6 +14,22 @@
   ],
   "main": "./src/extension.js",
   "contributes": {
+    "configuration": {
+      "title": "Markdown-Paste-Enhanced",
+      "type": "object",
+      "properties": {
+        "mdPasteEnhanced.path": {
+          "type": "string",
+          "default": "${currentFileDir}",
+          "description": "The destination to save image file.You can use variable ${currentFileDir} and ${projectRoot}. ${currentFileDir} will be replace by the path of directory that contain current editing file. ${projectRoot} will be replace by path of the project opened in vscode."
+        },
+        "mdPasteEnhanced.basePath": {
+          "type": "string",
+          "default": "${currentFileDir}",
+          "description": "The base path of image url.You can use variable ${currentFileDir} and ${projectRoot}. ${currentFileDir} will be replace by the path of directory that contain current editing file. ${projectRoot} will be replace by path of the project opened in vscode. If you set basePath to empty String, it will insert absolute path to file."
+        }
+      }
+    },
     "commands": [
       {
         "command": "md-paste-enhanced.paste",
@@ -43,5 +59,8 @@
     "glob": "^7.2.0",
     "mocha": "^9.2.2",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "moment": "^2.29.4"
   }
 }
