--- a/package.json
+++ b/package.json
@@ -1,23 +1,68 @@
 {
-  "name": "md-paste-jpg",
-  "displayName": "md-paste-jpg",
-  "description": "paste image to jpg format directly when working on the WSL",
+  "name": "md-paste-enhanced",
+  "displayName": "markdown paste enhanced",
+  "description": "use ctrl+v to paste image directly in markdown",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.71.0"
   },
+  "publisher": "dzylikecode",
+  "author": {
+    "name": "Dz",
+    "email": "mathBeWithCode@gmail.com"
+  },
+  "license": "MIT",
+  "icon": "res/icon.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dzylikecode/Inspire-VSCodeExt-Paste-Image"
+  },
+  "homepage": "https://github.com/dzylikecode/Inspire-VSCodeExt-Paste-Image/blob/master/README.md",
+  "bugs": {
+    "url": "https://github.com/dzylikecode/Inspire-VSCodeExt-Paste-Image/issues"
+  },
+  "keywords": [
+    "paste",
+    "image",
+    "markdown",
+    "paste image",
+    "keybindings"
+  ],
   "categories": [
     "Other"
   ],
   "activationEvents": [
-    "onCommand:md-paste-jpg.pasteJPG"
+    "onCommand:md-paste-enhanced.paste"
   ],
   "main": "./src/extension.js",
   "contributes": {
+    "configuration": {
+      "title": "Markdown-Paste-Enhanced",
+      "type": "object",
+      "properties": {
+        "mdPasteEnhanced.path": {
+          "type": "string",
+          "default": "${currentFileDir}/assets",
+          "description": "The destination to save image file.You can use variable ${currentFileDir} and ${projectRoot}. ${currentFileDir} will be replace by the path of directory that contain current editing file. ${projectRoot} will be replace by path of the project opened in vscode."
+        },
+        "mdPasteEnhanced.basePath": {
+          "type": "string",
+          "default": "${currentFileDir}",
+          "description": "The base path of image url.You can use variable ${currentFileDir} and ${projectRoot}. ${currentFileDir} will be replace by the path of directory that contain current editing file. ${projectRoot} will be replace by path of the project opened in vscode. If you set basePath to empty String, it will insert absolute path to file."
+        }
+      }
+    },
     "commands": [
       {
-        "command": "md-paste-jpg.pasteJPG",
+        "command": "md-paste-enhanced.paste",
         "title": "paste image from clipboard"
+      }
+    ],
+    "keybindings": [
+      {
+        "key": "ctrl+v",
+        "command": "md-paste-enhanced.paste",
+        "when": "editorTextFocus && editorLangId == markdown"
       }
     ]
   },
@@ -27,14 +72,17 @@
     "test": "node ./test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.71.0",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "14.x",
+    "@types/vscode": "^1.71.0",
+    "@vscode/test-electron": "^2.1.3",
     "eslint": "^8.11.0",
     "glob": "^7.2.0",
     "mocha": "^9.2.2",
-    "typescript": "^4.5.5",
-    "@vscode/test-electron": "^2.1.3"
+    "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "moment": "^2.29.4"
   }
 }
