--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "md-paste-enhanced",
   "displayName": "markdown paste enhanced",
   "description": "use ctrl+v to paste image directly in markdown",
-  "version": "0.0.5",
+  "version": "0.1.0",
   "engines": {
     "vscode": "^1.71.0"
   },
@@ -36,7 +36,7 @@
   "activationEvents": [
     "onCommand:md-paste-enhanced.paste"
   ],
-  "main": "./src/extension.js",
+  "main": "./out/main.js",
   "contributes": {
     "configuration": {
       "title": "Markdown-Paste-Enhanced",
