--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "activationEvents": [
     "onCommand:md-paste-enhanced.paste"
   ],
-  "main": "./out/main.js",
+  "main": "./src/extension.js",
   "contributes": {
     "configuration": {
       "title": "Markdown-Paste-Enhanced",
@@ -73,7 +73,7 @@
     "pretest": "npm run lint",
     "test": "node ./test/runTest.js",
     "vscode:prepublish": "npm run esbuild-base -- --minify",
-    "esbuild-base": "esbuild ./src/extension.js --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+    "esbuild-base": "esbuild ./src/extension.js --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
     "esbuild": "npm run esbuild-base -- --sourcemap",
     "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
     "test-compile": "tsc -p ./"
@@ -91,7 +91,9 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "imagemin": "^8.0.1",
     "imagemin-pngquant": "^9.0.2",
+    "is-wsl": "^2.2.0",
     "moment": "^2.29.4"
   }
 }
