--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
   },
   "dependencies": {
     "imagemin": "^8.0.1",
-    "imagemin-pngquant": "^9.0.2",
+    "imagemin-pngout": "^5.0.0",
     "is-wsl": "^2.2.0",
     "moment": "^2.29.4"
   }
