--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
   "dependencies": {
     "imagemin": "^8.0.1",
     "imagemin-pngout": "^5.0.0",
+    "imagemin-pngquant": "^9.0.2",
     "is-wsl": "^2.2.0",
     "moment": "^2.29.4"
   }
