--- a/package.json
+++ b/package.json
@@ -51,6 +51,25 @@
           "type": "string",
           "default": "${currentFileDir}",
           "description": "The base path of image url.You can use variable ${currentFileDir} and ${projectRoot}. ${currentFileDir} will be replace by the path of directory that contain current editing file. ${projectRoot} will be replace by path of the project opened in vscode. If you set basePath to empty String, it will insert absolute path to file."
+        },
+        "mdPasteEnhanced.ImageType": {
+          "type": "string",
+          "default": ".png",
+          "enum": [
+            ".png",
+            ".jpg"
+          ],
+          "description": "The type of image file you want to save"
+        },
+        "mdPasteEnhanced.compressEnable": {
+          "type": "boolean",
+          "default": false,
+          "description": "whether compress the image or not"
+        },
+        "mdPasteEnhanced.compressThreshold": {
+          "type": "number",
+          "default": 80,
+          "description": "Threshold value, the image which will be compressed if its size is larger than this value. Unit is KB"
         }
       }
     },
@@ -92,6 +111,7 @@
   },
   "dependencies": {
     "imagemin": "^8.0.1",
+    "imagemin-jpegtran": "^7.0.0",
     "imagemin-pngout": "^5.0.0",
     "imagemin-pngquant": "^9.0.2",
     "is-wsl": "^2.2.0",
