pale: drive me crazy

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "md-paste-enhanced",
   "displayName": "markdown paste enhanced",
   "description": "use ctrl+v to paste image directly in markdown",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "engines": {
     "vscode": "^1.71.0"
   },
@@ -28,7 +28,8 @@
     "paste image",
     "keybindings",
     "WSL",
-    "subsystem"
+    "subsystem",
+    "compress"
   ],
   "categories": [
     "Other"
