--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "md-paste-enhanced",
   "displayName": "markdown paste enhanced",
   "description": "use ctrl+v to paste image directly in markdown",
-  "version": "2.2.2",
+  "version": "2.3.0",
   "engines": {
     "vscode": "^1.71.0"
   },
@@ -90,9 +90,10 @@
   },
   "scripts": {
     "lint": "eslint .",
+    "vscode:prepublish": "npm run imagemin",
     "pretest": "npm run lint",
     "test": "node ./test/runTest.js",
-    "imagemin": "esbuild ./imagemin/index.js --bundle --outfile=out/imagemin.js"
+    "imagemin": "esbuild imagemin-dist/imagemin/index.js --bundle --outfile=imagemin-dist/imagemin.js --platform=node"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
@@ -104,7 +105,8 @@
     "eslint": "^8.11.0",
     "glob": "^7.2.0",
     "mocha": "^9.2.2",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "vite": "^3.1.8"
   },
   "dependencies": {
     "imagemin": "^8.0.1",
