--- a/package.json
+++ b/package.json
@@ -53,6 +53,11 @@
           "default": "${currentFileDir}",
           "description": "The base path of image url.You can use variable ${currentFileDir} and ${projectRoot}. ${currentFileDir} will be replace by the path of directory that contain current editing file. ${projectRoot} will be replace by path of the project opened in vscode. If you set basePath to empty String, it will insert absolute path to file."
         },
+        "mdPasteEnhanced.renderPattern": {
+          "type": "string",
+          "default": "![](${imagePath})",
+          "description": "The base path of image url. The ${imagePath} is the path relative to the base path."
+        },
         "mdPasteEnhanced.ImageType": {
           "type": "string",
           "default": ".png",
