--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "md-paste-enhanced",
   "displayName": "markdown paste enhanced",
   "description": "use ctrl+v to paste image directly in markdown",
-  "version": "2.5.3",
+  "version": "2.6.0",
   "engines": {
     "vscode": "^1.71.0"
   },
@@ -57,6 +57,16 @@
           "type": "string",
           "default": "![](${imagePath})",
           "description": "The pattern of image url. The ${imagePath} is the path relative to the base path."
+        },
+        "mdPasteEnhanced.confirmPattern": {
+          "type": "string",
+          "default": "None",
+          "enum": [
+            "None",
+            "Just Name",
+            "Full Path"
+          ],
+          "description": "the pattern that you want to confirm when you paste image"
         },
         "mdPasteEnhanced.ImageType": {
           "type": "string",
