--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "activationEvents": [
     "onLanguage"
   ],
-  "main": "./out/extension.js",
+  "main": "./src/extension.js",
   "contributes": {
     "configuration": {
       "title": "Markdown-Paste-Enhanced",
